--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,75 +8,57 @@
   </head>
 <body>
 
+
   <header>
     <h1 class="page-head">GROUP GOALS</h1>
   </header>
   
-  <main>
-    <div class="new">
-
-      <form class="adder" action="/" method="POST">
-        <label for="n-heading">
-          <input type="text" id="n-heading" name="heading" placeholder="Heading">
-        </label>
-        <label for="n-text">
-          <textarea type="text" id="n-text" name="text" placeholder="Your text here"></textarea>
-        </label>
-        <label for="n-author">
-          <input type="text" id="n-author" name="author" placeholder="Your Name">
-        </label>
-        <div class="btpar">
-          <button type="submit" id="pro">Save</button>
-          <button type="submit" id="clr">Clear</button>
-        </div>
-      </form>
-    </div>
+  <main>    
     <div class="saved">
-      <% for(let i=0; i<main.length; i++){ %>
-        <div class="n-note">
-          <span title="Heading" class="n-heading"><%=main[i].heading%></span>
+      <% for(let i=0; i<notes.length; i++){ %>
+        <div class="n-note" data-notenumber="<%=i%>">
+          <span class="n-heading">
+            <%=notes[i].heading%>
+          </span>
           <hr style="height: 1px; border: none; background-color: white;">
-          <p title="Content" class="n-text"><%=main[i].text%></p>
-          <span title="Author" class="n-author"><%=main[i].author%></span>
+          <span class="n-text"><%=notes[i].text%></span>
+          <span class="n-author"><%=notes[i].author%></span>
+          <aside class="edit-3dot-icon">
+            <div class="dots3"></div>
+            <div class="dots3"></div>
+            <div class="dots3"></div>
+            <div class="hidden-menu hide">
+              <div class="hidden-menu-elements">Edit</div>
+              <div class="hidden-menu-elements">Delete</div>
+            </div>
+          </aside>
         </div>
-        <%}%>
+      <%}%>
     </div>
   </main>
+
   <section class="free">
     <div class="add">
-      <span title="Add">
+      <span>
         &plus;
       </span>
     </div>
   </section>
+  <article class="modal hide">
+    <div>
+      <input size="1" name="heading" class="edit-heading" value="">
+      <hr style="height: 1px; border: none; background-color: white;">
+      <textarea name="text" class="edit-text"></textarea>
+      <input size="1" name="author" class="edit-author" value="">
+      <div class="edit-buttons-parent">
+        <div class="edit-button" id="save">Save</div>
+        <div class="edit-button" id="cancel">Cancel</div>
+      </div>
+    </div>
+  </article>
   <footer>
 
   </footer>
-  <script src="/jquery-3.5.1.min.js" type="text/javascript"></script>
-  <script>
-    $(function(){
-      $("div.add > span").click(()=>{
-        $("form.adder").slideToggle(250);
-        $("html, body").animate({ scrollTop: 0 }, "slow");
-      });
-      $("button#clr").click(()=>{
-        $("form.adder").slideUp(250);
-      });
-
-      $("button#clr").on("click", function(e){
-        e.preventDefault();
-        $("input").map(function(e){
-          return this.value = "";
-        });
-        $("textarea")[0].value = "";
-      });
-      $("p.n-text").tooltip();
-      $("span.n-author").tooltip();
-      $("span.n-heading").tooltip();
-
-    });
-
-    
-  </script>
+  <script src="/script.js"></script>
 </body>
 </html>
