--- a/public/styles.css
+++ b/public/styles.css
@@ -1,6 +1,12 @@
+:root{
+  --basicBg: linear-gradient(90deg, rgb(0, 128, 255), #24f);
+  --basicBorder:  1px solid rgb(131, 193, 255);
+
+}
 *{
   box-sizing: border-box;
   /* border: 1px solid red; */
+  font-family: 'Raleway', sans-serif;
 }
 body{
   margin: 0;
@@ -10,15 +16,30 @@ body{
   font-family: sans-serif;
 }
 
-header{
+hr{
+  height: 1px;
+  border: none;
+  background-color: rgb(131, 193, 255);
+}
+
+header, footer{
   position: fixed;
-  width: 100%;
+  /* width: 100%; */
   backdrop-filter: blur(5px);
-  background-color: rgba(0,0,0,0.2);
+  background-color: #333;
   z-index: 9;
   padding: 1.5rem;
   top: 0;
   left: 0;
+  right: 0;
+}
+footer{
+  top: unset;
+  bottom: 0;
+  text-align: center;
+}
+footer a{
+  color: white;
 }
 
 h1.page-head{
@@ -66,7 +87,7 @@ input#n-heading, input#n-author{
   height: 1.8rem;
   margin: 0.6rem 0;
   padding: 0.6rem;
-  border: 1px solid rgb(131, 193, 255);
+  border: var(--basicBorder);
   background-color: rgba(0,0,0,0.1);
   border-radius: 12px;
   color: #eee;
@@ -77,21 +98,29 @@ textarea#n-text{
   height: 2.8rem;
   margin: 0.6rem 0;
   padding: 0.6rem;
-  border: 1px solid rgb(131, 193, 255);
+  border: var(--basicBorder);
   background-color: rgba(0,0,0,0.1);
   border-radius: 12px;
   color: #eee;
   outline: none;
 }
+
+.saved{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
 div.n-note{
   opacity: 0.9;
-  background: linear-gradient(90deg, rgb(0, 128, 255), #24f);
-  margin: 0.6rem auto;
-  border: 1px solid rgb(131, 193, 255);
+  background: var(--basicBg);
+  margin: 0.6rem;
+  border: var(--basicBorder);
   border-radius: 12px;
   padding: 1.2rem;
   box-shadow: 0 0 5px 0px rgba(0,0,0,0.2);
   position: relative;
+  flex-basis: calc(50% - 1.2rem);
 }
 div.n-note:hover{
   opacity: 1;
@@ -113,19 +142,21 @@ div.n-note:hover{
   position: absolute;
   right: 0.5rem;
   top: 0.5rem;
-  opacity: 0.8;
 }
+
 .hidden-menu{
   position: absolute;
   top: 2rem;
   right: 1rem;
-  border-radius: 5px;
   background-color: #ddd;
 }
 .hidden-menu-elements{
   padding: 0.25rem;
   cursor: pointer;
   color: black;
+}
+.hidden-menu-elements:hover{
+  background-color: #ccc;
 }
 
 .n-heading, .n-text, .n-author{
@@ -150,7 +181,7 @@ div.n-note:hover{
 .n-author{
   display: block;
   font-size: 0.8rem;
-  opacity: 0.7;
+  opacity: 0.9;
 }
 
 article.modal{
@@ -172,10 +203,14 @@ article.modal{
   display: block;
   background-color: rgba(255,255,255,0.2);
   border: none;
+  outline: none;
   color: inherit;
   border-radius: 5px;
   padding: 0.25rem;
   margin: 0.25rem;
+}
+.edit-heading:hover, .edit-text:hover, .edit-author:hover{
+  background-color: rgba(255,255,255,0.3);
 }
 .edit-buttons-parent{
   display: flex;
@@ -185,12 +220,24 @@ article.modal{
   text-align: center;
   flex: 1;
   cursor: pointer;
-  background-color: #24f;
+  background-color: #d23;
   max-width: 150px;
   margin: 0.5rem;
+  border-radius: 5px;
   padding: 0.25rem;
 }
-
+.edit-button:hover{
+  background-color: rgb(243, 83, 96);
+}
+.edit-inputs-parent{
+  background-image: var(--basicBg);
+  border: var(--basicBorder);
+  border-radius: 5px;
+  padding: 1rem;
+  width: 40%;
+  min-width: 360px;
+  max-width: 540px;
+}
 
 section.free{
   position: fixed;
@@ -214,7 +261,20 @@ div.add > span{
   cursor: pointer;
 }
 div.add > span:hover{
-  box-shadow: 0 0 5px 0px rgba(0,0,0,0.2);
+  background-color: rgb(243, 83, 96);
+}
+
+@media all and (max-width: 950px){
+  div.n-note{
+    flex-basis: 100%;
+  }
+}
+
+@media all and (max-width: 600px){
+  .edit-inputs-parent{
+    width: 70%;
+    min-width: 140px;
+  }
 }
 
 @media all and (max-width: 350px){
@@ -225,71 +285,4 @@ div.add > span:hover{
 
 .hide{
   display: none !important;
-}
-
-/* The switch - the box around the slider */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 3rem;
-  height: 30px;
-}
-
-/* Hide default HTML checkbox */
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 50%;
-  left: 50%;
-  width: inherit;
-  height: inherit;
-  transform: translate(-50%, -50%);
-  /* right: 0;
-  bottom: 0; */
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 1rem;
-  width: 1rem;
-  top: 50%;
-  left: 1rem;
-  transform: translate(-50%, -50%);
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  transform: translate(50%, -50%);
-  /* alternatively
-  left: 2rem; */
-}
-
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
 }
