--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 
 
   <header>
-    <h1 class="page-head">GROUP GOALS</h1>
+    <h1 class="page-head">When Things Get Normal</h1>
   </header>
   
   <main>    
