--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group Goals</title>
+    <title>Public Note</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
   </head>
@@ -11,7 +11,7 @@
 
 
   <header>
-    <h1 class="page-head">When Things Get Normal</h1>
+    <h1 class="page-head">Public Note</h1>
   </header>
   
   <main>    
@@ -68,7 +68,7 @@
     </div>
   </article>
   <footer>
-    <span>by <a href="http://utkarshdhiman.xyz">Utkarsh Dhiman</a></span>
+    <span>by <a href="http://bit.ly/ut-island">Utkarsh Dhiman</a></span>
   </footer>
   <script src="/script.js"></script>
 </body>
